--- a/front/style/_search.scss
+++ b/front/style/_search.scss
@@ -1,4 +1,10 @@
 .search {
+    &__loader {
+        width: 100%;
+        height: 200px;
+        background: url('/images/loader-sm.gif') no-repeat 50% 50%;
+    }
+
     &__bar {
         display: flex;
         justify-content: space-between;
